# full-stack-rust-cloudflare-axum

./: .gitignore  Cargo.toml  README.md  package.json  schema.sql  wrangler.toml
migrations/: 0000_create_notes_table.sql  0001_create_user_id_index.sql
src/: lib.rs
src/app/: axum_extractors.rs  axum_middleware.rs  mod.rs  notes_model.rs  notes_routes.rs  notes_service.rs  user_id_extractor.rs  user_id_middleware.rs
templates/: base.html
templates/components/: nav-bar.html
templates/notes/: edit.html  index.html  show.html
