[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = { git = "https://github.com/FlareLine/workers-rs", branch = "d1-support", features=["d1"] }
serde_json = "1.0.67"
tower-service = "0.3.2"
axum-cloudflare-adapter = { git = "https://github.com/logankeenan/axum-cloudflare-adapter.git", branch = "d1-support" }
axum-cloudflare-adapter-macros = "0.1.0"
axum = { version = "0.6.7", default-features = false, features = ["form"] }
oneshot = "0.1.5"
wasm-bindgen-futures = "0.4.34"
askama_axum = "0.3.0"
askama = "0.12.0"
uuid = { version = "1.3.0", features = ["serde"] }
serde = { version = "1.0.155" }
pulldown-cmark = "0.8"
validator = { version = "0.16.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
